# otus-cpp-prof-temp-for-13hw

./: CMakeLists.txt  Dockerfile  README.txt
include/: classifier.h  mlp_classifier.h
src/: main.cpp  mlp_classifier.cpp
tests/: mlp_test.cpp
